
2015-11-27: Janusz Dobrowolski Fixed es_MX installer translation file in core here on 2015-11-06
2015-11-23: Joe Hunt           Shipping shown in sales documents and views only if present.
2015-11-14: Joe Hunt           Account_code to only accept 0-9 and a dot if $accounts_alpha = 0 (default)
2015-11-13/15: Joe Hunt        Backported Date Picker Icon Vertical Alignment fix (moved from FAMods to core)
2015-10-18: Joe Hunt / Petros  Reruns of previous commit.
2015-10-15: Joe Hunt / Petros  Fixed correct calculation of stock_moves standard_cost when producing an Advanced Assembly.
2015-10-14: Joe Hunt / Petros  Changed the GL accounts in Manufacturing to go from Cost accounts to Assembly Accounts.
2015-10-13: Janusz Dobrowolski Fixed net value calculations for GRN leading to unbalanced clearing account.
2015-10-06: Janusz Dobrowolski Fixed deactivate_extension hook execution on extension deactivation.
2015-09-07: Joe Hunt           Improved safety handling of bad PHP interpretor releases.
2015-07-10: Janusz Dobrowolski [0003240] Tax Report: duplicated lines were listed for edited transactions.

2015-05-09 23:07:36 +0200 Joe Hunt 
Merge branch 'master' of ssh://git.code.sf.net/p/frontaccounting/git
2015-05-09 23:06:09 +0200 Joe Hunt 
New CHANGELOG.txt format.
M	CHANGELOG.txt
M	doc/CHANGELOG.old.txt

2015-05-06 22:30:47 +0200 Janusz Dobrowolski 
Fixed regression in db_pager.
M	includes/db_pager.inc

2015-04-13 19:03:26 +0200 Janusz Dobrowolski 
Empty password is forbidden when creating new user account.
M	admin/users.php

2015-04-12 00:58:31 +0200 Janusz Dobrowolski 
HTML cleanup in fiscal years selector helper.
M	includes/ui/ui_lists.inc

2015-04-29 16:39:48 +0200 Joe Hunt 
Only first item in Supplier Credit Notes had tax added. Fixed.
M	purchasing/supplier_credit.php

2015-04-29 14:18:44 +0200 Joe Hunt 
Fixed wrong headers in Supplier Credit Note.
M	purchasing/includes/ui/invoice_ui.inc

2015-04-28 16:20:06 +0200 Joe Hunt 